# Rideshare-Simulation

./: CMakeLists.txt  LICENSE  README.md  RUBRIC.md
data/: downtown-kc.osm
src/: BasicGraphics.cpp  BasicGraphics.h  BasicIntersection.h  ConcurrentObject.cpp  ConcurrentObject.h  Coordinate.h  Graphics.cpp  Graphics.h  Intersection.cpp  Intersection.h  MapObject.h  Model.cpp  Model.h  ObjectHolder.h  Passenger.cpp  Passenger.h  PassengerQueue.cpp  PassengerQueue.h  RideMatcher.cpp  RideMatcher.h  RouteModel.cpp  RouteModel.h  RoutePlanner.cpp  RoutePlanner.h  TrafficLight.cpp  TrafficLight.h  TrafficSimulator.cpp  Vehicle.cpp  Vehicle.h  VehicleManager.cpp  VehicleManager.h  main.cpp
src/argparser/: simple_parser.cpp  simple_parser.h
src/concurrent/: ConcurrentObject.cpp  ConcurrentObject.h  ObjectHolder.h  PassengerQueue.cpp  PassengerQueue.h  RideMatcher.cpp  RideMatcher.h  VehicleManager.cpp  VehicleManager.h  concurrent_object.cpp  concurrent_object.h  message_handler.h  object_holder.h  passenger_queue.cpp  passenger_queue.h  ride_matcher.cpp  ride_matcher.h  simple_message.h  vehicle_manager.cpp  vehicle_manager.h
src/map_object/: MapObject.h  Vehicle.cpp  Vehicle.h  map_object.h  passenger.cpp  passenger.h  vehicle.cpp  vehicle.h
src/mapping/: Model.cpp  RouteModel.cpp  RouteModel.h  coordinate.h  model.cpp  model.h  route_model.cpp  route_model.h
src/routing/: RoutePlanner.cpp  RoutePlanner.h  route_planner.cpp  route_planner.h
src/visual/: Graphics.cpp  Graphics.h  graphics.cpp  graphics.h
